--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
-<!doctype html>
 <html>
-<head>
-<title>bomb tutorial</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
-</head>
-<body>
-to make a bomb is simple, just get explosive and a fuse, then stick the fuse in a place where it can burn the explosive, detonating it. Kaboom!
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CODEx</title>
+    <!-- The style.css file allows you to change the look of your web pages.
+         If you include the next line in all your web pages, they will all share the same look.
+         This makes it easier to make new pages for your site. -->
+    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  </head>
+  <body>
+    <h1>CODEx</h1>
+
+    <p>Welcome! I actually have now set your computer to explode into honey nut cheerios in <strong>3</strong> seconds, so one last thing for you: <em>haha</em></p>
+
+    <a href="https://stackoverflow.com" target="_blank" rel="noopener noreferrer">another great coding resource!</a>
+    <p>My employees:</p>
+    <img src="/Assets/Wake_Me_Up.png"
+    height="287"
+    width="300">
+    <img src="/Assets/Wagoogus_Jr..png">
+    <img src="/Assets/Glorpo.png"
+    height="287"
+    width="300">
+
+    <p></p><a href="index2.html">page 2</a></p>
+
+    <p></p>My favorite things:></p>
+
+    <ul>
+      <li>petting my dog</li>
+      <li>playing videogames with someone else</li>
+      <li>trolling wannabe hacker people into frying their computer</li>
+    </ul>
+    
+    <p>Wanna learn how to write HTML/CSS?(The languages used to create this site)Check out these <a href="https://developer.mozilla.org" target="_blank" rel="noopener noreferrer">tutorials</a> </p>
+  </body>
 </html>
