Changes to be committed: 	modified:   index2.html 	new file:   style2.css

--- a/index2.html
+++ b/index2.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blimps</title>
-    <!-- The style.css file allows you to change the look of your web pages.
-         If you include the next line in all your web pages, they will all share the same look.
-         This makes it easier to make new pages for your site. -->
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-    <h1>Welcome to the second page!</h1>
+<html lang="en">
+<head>
+<title>Explore</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="/style2.css" rel="stylesheet" type="text/css" media="all">
+<style>
 
-    <p>Here is my github: <a href="https://github.com/TW-LaMe">I, myself, and me</a>.</p>
+</style>
+</head>
+<body>
 
-    <p>this one is going to be less pretty bc it is just a link method collection</p>
+<h2>browser</h2>
+<p>start browsing NOW!</p>
 
-    <p>you do get one image though:</p>
-    <img src="/catking.png">
+<header>
+  <h2>Language of the day!</h2>
+</header>
 
-    <p>Here's some more methods (watch out for funnies!):</p>
-
+<section>
+  <nav>
     <ul>
-      <li>First</li>
-      <li>Second thing</li>
-      <li>Third thing</li>
+      <li><strong>Other Languages</strong></li>
+      <li><a href="#">javanero</a></li>
+      <li><a href="#">snake language</a></li>
+      <li><a href="#">ruby</a></li>
     </ul>
+  </nav>
+  
+  <article>
+    <h1>Python</h1>
+    <p>Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation.</p>
+    <p>Python is dynamically type-checked and garbage-collected. It supports multiple programming paradigms, including structured (particularly procedural), object-oriented and functional programming. It is often described as a "batteries included" language due to its comprehensive standard library.</p>
+    <p>Guido van Rossum began working on Python in the late 1980s as a successor to the ABC programming language and first released it in 1991 as Python 0.9.0. Python 2.0 was released in 2000. Python 3.0, released in 2008, was a major revision not completely backward-compatible with earlier versions. Python 2.7.18, released in 2020, was the last release of Python 2.</p>
+    <p>Python consistently ranks as one of the most popular programming languages, and has gained widespread use in the machine learning community.</p>
+  </article>
+</section>
 
-    <p>To learn more HTML/CSS, check out these <a href="https://neocities.org/tutorials">tutorials</a>!</p>
-  </body>
+<footer>
+  <p><a href="Read More">Read More</a></p>
+</footer>
+
+</body>
 </html>
