new file:   Assets/Adobe Express - file.png 	modified:   index.html 	modified:   index2.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,32 +7,33 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <style>div.logo {
+      position: absolute;
+      top: 50px;
+      right: 50px;
+    }</style>
   </head>
   <body>
-    <h1>CODEx</h1>
+    <h1 style="font-size: 100px">CODEx</h1>
 
-    <p>Welcome! I actually have now set your computer to explode into honey nut cheerios in <strong>3</strong> seconds, so one last thing for you: <em>haha</em></p>
+    <p>welcome to a cesspool</p>
 
-    <a href="https://stackoverflow.com" target="_blank" rel="noopener noreferrer">another great coding resource!</a>
-    <p>My employees:</p>
-    <img src="/Assets/Wake_Me_Up.png"
-    height="287"
-    width="300">
-    <img src="/Assets/Wagoogus_Jr..png">
-    <img src="/Assets/Glorpo.png"
-    height="287"
-    width="300">
+    <a href="https://developer.mozilla.org/en-US/" target="_blank" rel="noopener noreferrer">another great coding resource!</a>
+    <p>browse languages NOW!:</p>
+    <div class="logo">
+    <img src="/Assets/Adobe Express - file.png"
+    height="387"
+    width="400"
+    ></div>
 
-    <p></p><a href="index2.html">page 2</a></p>
+    <p></p><a href="index2.html">Explore</a></p>
 
     <p></p>My favorite things:></p>
 
     <ul>
       <li>petting my dog</li>
       <li>playing videogames with someone else</li>
-      <li>trolling wannabe hacker people into frying their computer</li>
+      <li>trolling wannabe hacker people into frying their <a href="https://blimps.neocities.org">computer</a></li>
     </ul>
-    
-    <p>Wanna learn how to write HTML/CSS?(The languages used to create this site)Check out these <a href="https://developer.mozilla.org" target="_blank" rel="noopener noreferrer">tutorials</a> </p>
   </body>
 </html>
