--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Explore</title>
+<title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="/style2.css" rel="stylesheet" type="text/css" media="all">
@@ -21,7 +21,7 @@
 <section>
   <nav>
     <ul>
-      <li><strong>Other Languages</strong></li>
+      <li><strong>Languages</strong></li>
       <li><a href="#">javanero</a></li>
       <li><a href="#">snake language</a></li>
       <li><a href="#">ruby</a></li>
