fixed the thingy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="https://developer.mozilla.org/en-US/" target="_blank" rel="noopener noreferrer">another great coding resource!</a>
     <p>browse languages NOW!:</p>
     <div class="logo">
-    <img src="/Assets/Adobe Express - file.png"
+    <img src="./assets/wikipediaball.png"
     height="387"
     width="400"
     ></div>
