made a revert to homepage button on browse tab and made the code look cleaner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }</style>
   </head>
   <body>
-    <h1 style="font-size: 100px">CODEx</h1>
+    <h1>CODEx</h1>
 
     <p>welcome to a cesspool</p>
 
@@ -26,7 +26,7 @@
     width="400"
     ></div>
 
-    <p></p><a href="index2.html">Explore</a></p>
+    <p></p><a href="./pages/browse.html">Explore</a></p>
 
     <p></p>My favorite things:></p>
 
