--- a/pages/browse.html
+++ b/pages/browse.html
@@ -13,6 +13,7 @@
 
 <h2>browser</h2>
 <p>start browsing NOW!</p>
+<h6><em>or go back <a href="/index.html">home</a></em></h6>
 
 <header>
   <h2>Language of the day!</h2>
