--- a/pages/browse.html
+++ b/pages/browse.html
@@ -4,7 +4,7 @@
 <title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/style2.css" rel="stylesheet" type="text/css" media="all">
+<link href="../css/browse.css" rel="stylesheet" type="text/css" media="all">
 <style>
 
 </style>
@@ -39,7 +39,7 @@
 </section>
 
 <footer>
-  <p><a href="Read More">Read More</a></p>
+  <p><a href="./python.html">Read More</a></p>
 </footer>
 
 </body>
