--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       right: 50px;
     }</style>
   </head>
+<script type="text/javascript" src="scripts.js"></script>
   <body>
     <h1>CODEx</h1>
 
