added a javascript page

--- a/pages/browse.html
+++ b/pages/browse.html
@@ -23,7 +23,7 @@
   <nav>
     <ul>
       <li><strong>Languages</strong></li>
-      <li><a href="#">javanero</a></li>
+      <li><a href="./javascript.html">javanero</a></li>
       <li><a href="#">snake language</a></li>
       <li><a href="#">ruby</a></li>
     </ul>
