--- a/pages/browse.html
+++ b/pages/browse.html
@@ -24,7 +24,7 @@
     <ul>
       <li><strong>Languages</strong></li>
       <li><a href="./javascript.html">javanero</a></li>
-      <li><a href="#">snake language</a></li>
+      <li><a href="./python.html">snake language</a></li>
       <li><a href="#">ruby</a></li>
     </ul>
   </nav>
