--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -20,8 +20,8 @@
     <ul>
       <li><h2><strong>Summary</strong></h2></li>
       <li><strong>Date of creation: 20 February 1991</strong></li>
-      <li><strong> Website: <a href="https://www.python.org">python.org</a> </strong></li>
-      <li><strong>Created by: Guido van Rossum</strong></li>
+      <li><strong> Website: (nonexistent) </strong></li>
+      <li><strong>Created by: Brendan Eich</strong></li>
     </ul>
   </nav>
   <article>
