--- a/pages/python.html
+++ b/pages/python.html
@@ -4,7 +4,7 @@
 <title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../css/python.css" rel="stylesheet" type="text/css" media="all">
+<link href="../css/page.css" rel="stylesheet" type="text/css" media="all">
 <style>
 
 </style>
