--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -4,10 +4,8 @@
 <title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="/favicon.ico">
 <link href="../css/page.css" rel="stylesheet" type="text/css" media="all">
-<style>
-
-</style>
 </head>
 <body>
 
