--- a/pages/CodingResources.html
+++ b/pages/CodingResources.html
@@ -17,8 +17,8 @@
   <nav>
     <ul>
       <li><h2><strong>Summary</strong></h2></li>
-      <li><strong>Date of creation: 20 February 1991</strong></li>
-      <li><strong> Website: (nonexistent) </strong></li>
+      <li><strong>why do you need to summarize links</strong></li>
+      <li><strong> Website: <a href="skibidi.com" rel="noreferrer noopener" target="_blank">no click pls</a> </strong></li>
       <li><strong>Created by: Brendan Eich</strong></li>
     </ul>
   </nav>
