favicon adding time

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="https://developer.mozilla.org/en-US/" target="_blank" rel="noopener noreferrer">another great coding resource!</a>
     <p>browse languages NOW!:</p>
     <div class="logo">
-    <img src="./assets/wikipediaball.png"
+    <img src="./Assets/wikipediaball.png"
     height="387"
     width="400"
     ></div>
