--- a/pages/CodingResources.html
+++ b/pages/CodingResources.html
@@ -4,7 +4,7 @@
 <title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="../downsyndrome_gumball.ico">
 <link href="../css/page.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
