--- a/pages/browse.html
+++ b/pages/browse.html
@@ -4,7 +4,7 @@
 <title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="../favicon.ico">
 <link href="../css/browse.css" rel="stylesheet" type="text/css" media="all">
 <style>
 
