adding coding resources page

--- a/pages/CodingResources.html
+++ b/pages/CodingResources.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="../downsyndrome_gumball.ico">
-<link href="../css/page.css" rel="stylesheet" type="text/css" media="all">
+<link href="../css/CodingResources.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
 
@@ -18,14 +18,17 @@
     <ul>
       <li><h2><strong>Summary</strong></h2></li>
       <li><strong>why do you need to summarize links</strong></li>
-      <li><strong> Website: <a href="skibidi.com" rel="noreferrer noopener" target="_blank">no click pls</a> </strong></li>
-      <li><strong>Created by: Brendan Eich</strong></li>
+      <li><strong> Website: <a href="no" rel="noreferrer noopener" target="_blank">no.</a> </strong></li>
+      <li><strong>Created by: the computers used to make the websites</strong></li>
     </ul>
   </nav>
   <article>
     <h2>Overview</h2>
     <ul>
-        <li>w3schools</li>
+        <li><a href="www.w3schools.com">w3schools, general coding help.</a></li>
+        <li><a href="www.sololearn.com">sololearn, it's like duolingo but with programming languages</a></li>
+        <li><a href="www.freecodecamp.org"></a>freecodecamp, like w3schools but with better tutorials (imo)</li>
+        <li>uh</li>
     </ul>
 </section>
 
