--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -84,7 +84,7 @@ sayBye();</pre>
 </section>
 
 <footer>
-  <p><a href="./browse.html">Return to browse</a></p>
+  <p><a href="./browse.html">Return to browse</a> or<a href="../index.html"> Return to home</a></p>
 </footer>
 
 </body>
