--- a/pages/browse.html
+++ b/pages/browse.html
@@ -4,7 +4,7 @@
 <title>cesspool</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="../favicon.ico">
+<link rel="icon" type="image/x-icon" href="../tripak.ico">
 <link href="../css/browse.css" rel="stylesheet" type="text/css" media="all">
 <style>
 
@@ -24,9 +24,9 @@
   <nav>
     <ul>
       <li><strong>Languages</strong></li>
-      <li><a href="./javascript.html">javanero</a></li>
-      <li><a href="./python.html">snake language</a></li>
-      <li><a href="#">ruby</a></li>
+      <li><strong><a href="./javascript.html">javanero</a></strong></li>
+      <li><strong><a href="./python.html">snake language</a></strong></li>
+      <li><strong><a href="./CodingResources.html">More coding resources</a></strong></li>
     </ul>
   </nav>
   
