--- a/pages/python.html
+++ b/pages/python.html
@@ -62,7 +62,7 @@
 </section>
 
 <footer>
-  <p><a href="./browse.html">Return to browse</a></p>
+  <p><a href="./browse.html">Return to browse</a> or<a href="../index.html"> Return to home</a></p>
 </footer>
 
 </body>
