added favicon for sites

--- a/pages/CodingResources.html
+++ b/pages/CodingResources.html
@@ -18,7 +18,7 @@
     <ul>
       <li><h2><strong>Summary</strong></h2></li>
       <li><strong>why do you need to summarize links</strong></li>
-      <li><strong> Website: <a href="no" rel="noreferrer noopener" target="_blank">no.</a> </strong></li>
+      <li><strong> Website: <a href="no" rel="noreferrer noopener" target="_blank" alt="test">no.</a> </strong></li>
       <li><strong>Created by: the computers used to make the websites</strong></li>
     </ul>
   </nav>
@@ -27,7 +27,7 @@
     <ul>
         <li><a href="www.w3schools.com">w3schools, general coding help.</a></li>
         <li><a href="www.sololearn.com">sololearn, it's like duolingo but with programming languages</a></li>
-        <li><a href="www.freecodecamp.org"></a>freecodecamp, like w3schools but with better tutorials (imo)</li>
+        <li><a href="www.freecodecamp.org">freecodecamp, like w3schools but with better tutorials (imo)</a></li>
         <li>uh</li>
     </ul>
 </section>
