--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    
     <style>div.logo {
       position: absolute;
       top: 50px;
