--- a/test.html
+++ b/test.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Head</h1>
+<p>paragraph.</p>
+<button><a href="https://www.apple.com">i like eating crayons</a></button>
+<
+<footer>foot</footer>
 
 </body>
 </html>
