--- a/test.html
+++ b/test.html
@@ -3,26 +3,27 @@
 <head>
   <title>My Page Title</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="/scripts.js"></script>
 </head>
 <body>
-  <script src="scripts.js"></script>
+
 
 <h1>Head</h1>
 <p>paragraph.</p>
 <audio id="myAudio">
-  <source src="wildmonkeylong.mp3" type="audio/mpeg">
+  <source src="./assets/wildmonkeylong.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 <audio id="myAudio2">
-  <source src="wildmonkey.mp3" type="audio/mpeg">
+  <source src="./assets/wildmonkey.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
 
   
 
-<button onclick="playAudio()" type="button">wild animal long</button>
-<button onclick="playAudio2()" type="button">wild animal</button>
+<button onclick="playAudio()" type="button">skreech</button>
+<button onclick="playAudio2()" type="button">knormal talc</button>
 <script>
   var x = document.getElementById("myAudio"); 
   
