made code cleaner

--- a/pages/python.html
+++ b/pages/python.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="../downsyndrome_gumball.ico">
 <link href="../css/page.css" rel="stylesheet" type="text/css" media="all">
+
 <style>
 
 </style>
@@ -75,23 +76,13 @@
 <button onclick="playAudio()" type="button">skreech</button>
 <button onclick="playAudio2()" type="button">knormal talc</button>
 <script>
-  var x = document.getElementById("myAudio"); 
-  
-  function playAudio() { 
-    x.play(); 
-  } 
-  </script>
-  <script>
-    var y = document.getElementById("myAudio2"); 
-    
-    function playAudio2() { 
-      y.play(); 
-    } 
-    </script>
 
+    </script>
+<script type="text/javascript" src="../scripts.js"></script>
 <footer>
   <p><a href="./browse.html">Return to browse</a> or<a href="../index.html"> Return to home</a></p>
 </footer>
 
 </body>
+
 </html>
